--- a/src/app/banks/bank-list/bank-list.component.html
+++ b/src/app/banks/bank-list/bank-list.component.html
@@ -1,1 +1,8 @@
-<p>Hi!</p>
+<mat-accordion multi="true">
+  <mat-expansion-panel *ngFor="let bank of banks">
+    <mat-expansion-panel-header>
+      {{bank.name}}
+    </mat-expansion-panel-header>
+    <p>{{bank.content}}</p>
+  </mat-expansion-panel>
+</mat-accordion>
