Added event binding to list newly added bank(s)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <main>
-  <app-bank-create></app-bank-create>
-  <app-bank-list></app-bank-list>
+  <app-bank-create (bankCreated)="onBankAdded($event)"></app-bank-create>
+  <app-bank-list [banks]="storedBanks"></app-bank-list>
 </main>
 
 
