--- a/src/app/banks/bank-list/bank-list.component.html
+++ b/src/app/banks/bank-list/bank-list.component.html
@@ -3,7 +3,7 @@
     <mat-expansion-panel-header>
       {{bank.name}}
     </mat-expansion-panel-header>
-    <p>{{bank.content}}</p>
+    <p>{{bank.value}}</p>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="info-text mat-body-1" *ngIf= "banks.length <= 0">No banks added yet!</p>
