--- a/src/app/banks/bank-create/bank-create.component.html
+++ b/src/app/banks/bank-create/bank-create.component.html
@@ -1,12 +1,30 @@
 <mat-card>
-  <mat-form-field>
-    <input matInput type="text" [(ngModel)]="enteredName">
-  </mat-form-field>
-  <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
-  </mat-form-field>
-  <button
-    mat-raised-button
-    color="accent"
-    (click)="onAddBank()" >Save Bank</button>
+  <form (submit)="onAddBank(bankForm)" #bankForm="ngForm">
+      <mat-form-field>
+          <input
+            matInput
+            type="text"
+            name="name"
+            ngModel
+            required
+            minlength="3"
+            #name="ngModel">
+            <mat-error *ngIf="name.invalid">Please enter a bank name.</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <textarea
+            matInput
+            rows="6"
+            name="value"
+            ngModel
+            required
+            #value="ngModel"></textarea>
+            <mat-error *ngIf="value.invalid">Please enter a bank value.</mat-error>
+        </mat-form-field>
+        <button
+          mat-raised-button
+          color="accent"
+          type="submit">Save Bank</button>
+  </form>
+
 </mat-card>
