--- a/src/app/banks/bank-list/bank-list.component.html
+++ b/src/app/banks/bank-list/bank-list.component.html
@@ -4,6 +4,10 @@
       {{bank.name}}
     </mat-expansion-panel-header>
     <p>{{bank.value}}</p>
+    <mat-action-row>
+      <button mat-button color="primary">Edit</button>
+      <button mat-button color="warn">Delete</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="info-text mat-body-1" *ngIf= "banks.length <= 0">No banks added yet!</p>
