--- a/src/app/banks/bank-list/bank-list.component.html
+++ b/src/app/banks/bank-list/bank-list.component.html
@@ -6,7 +6,7 @@
     <p>{{bank.value}}</p>
     <mat-action-row>
       <button mat-button color="primary">Edit</button>
-      <button mat-button color="warn">Delete</button>
+      <button mat-button color="warn" (click)="onDelete(bank.id)">Delete</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
