added routing and links to app-header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
 <main>
-  <app-bank-create></app-bank-create>
-  <app-bank-list></app-bank-list>
+  <router-outlet></router-outlet>
 </main>
 
 
