--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<mat-toolbar color="primary">My Banks</mat-toolbar>
+<mat-toolbar color="primary">
+  <span>
+    <a routerLink="/">My Banks</a>
+  </span>
+
+  <span class="spacer"></span>
+  <ul>
+    <li>
+      <a mat-button routerLinkActive="mat-accent" routerLink="/create">New Bank</a>
+    </li>
+  </ul>
+</mat-toolbar>
