--- a/src/app/banks/bank-list/bank-list.component.html
+++ b/src/app/banks/bank-list/bank-list.component.html
@@ -5,7 +5,7 @@
     </mat-expansion-panel-header>
     <p>{{bank.value}}</p>
     <mat-action-row>
-      <button mat-button color="primary">Edit</button>
+      <a mat-button color="primary" [routerLink]="['/edit',bank.id]">Edit</a>
       <button mat-button color="warn" (click)="onDelete(bank.id)">Delete</button>
     </mat-action-row>
   </mat-expansion-panel>
