--- a/src/app/banks/bank-create/bank-create.component.html
+++ b/src/app/banks/bank-create/bank-create.component.html
@@ -1,5 +1,6 @@
 <mat-card>
-  <form (submit)="onSaveBank(bankForm)" #bankForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSaveBank(bankForm)" #bankForm="ngForm" *ngIf="!isLoading">
       <mat-form-field>
           <input
             matInput
