--- a/src/app/banks/bank-list/bank-list.component.html
+++ b/src/app/banks/bank-list/bank-list.component.html
@@ -1,4 +1,5 @@
-<mat-accordion multi="true" *ngIf="banks.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="banks.length > 0 && !isLoading">
   <mat-expansion-panel *ngFor="let bank of banks">
     <mat-expansion-panel-header>
       {{bank.name}}
@@ -10,4 +11,4 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="info-text mat-body-1" *ngIf= "banks.length <= 0">No banks added yet!</p>
+<p class="info-text mat-body-1" *ngIf= "banks.length <= 0 && !isLoading">No banks added yet!</p>
