--- a/src/app/banks/bank-list/bank-list.component.html
+++ b/src/app/banks/bank-list/bank-list.component.html
@@ -14,4 +14,5 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
+<mat-paginator [length]="totalBanks" [pageSize]="banksPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)" *ngIf="banks.length > 0"></mat-paginator>
 <p class="info-text mat-body-1" *ngIf= "banks.length <= 0 && !isLoading">No banks added yet!</p>
