--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,17 @@
 
   <span class="spacer"></span>
   <ul>
-    <li>
+    <li *ngIf="userIsAuthenticated">
       <a mat-button routerLinkActive="mat-accent" routerLink="/create">New Bank</a>
+    </li>
+    <li>
+      <a *ngIf="!userIsAuthenticated" mat-button routerLinkActive="mat-accent" routerLink="/login">Login</a>
+    </li>
+    <li>
+      <a *ngIf="!userIsAuthenticated" mat-button routerLinkActive="mat-accent" routerLink="/signup">Signup</a>
+    </li>
+    <li *ngIf="userIsAuthenticated">
+      <button mat-button (click)="onLogout()">Logout</button>
     </li>
   </ul>
 </mat-toolbar>
